# eq-runner-mock-sds

./: .gitignore  Dockerfile  Makefile  README.md  create_dataset_file.py  dataset_1.json  dataset_2.json  dataset_bres_221_v1.json  dataset_ppi_132_v2.json  dataset_prodcom_014_v1.json  dataset_roofing_tiles_068_v1.json  dataset_test_supplementary_data_001_v1.json  dataset_test_supplementary_data_001_v2.json  pyproject.toml  reorganise_mock_data_paths.py
.github/workflows/: codeql-analysis.yml  main.yml  pull_request.yml
app/: main.py  test_app.py
mock_data/: supplementary_data.json  supplementary_data_id_2.json  supplementary_data_v2.json  supplementary_data_v2_id_2.json  supplementary_data_v3.json  supplementary_dataset_metadata_response.json
mock_data/ppi_132/v2/: 12345678901.json
mock_data/test/: supplementary_data_v3.json  v2.json  v3.json
mock_data/test/v1/: 12345678901.json
mock_data/test/v2/: 12345678901.json
mock_data/test_supplementary_data_001/v1/: 12346789012A.json  12346789012B.json
mock_data/test_supplementary_data_001/v2/: 12346789012A.json  12346789012B.json
scripts/: load_mock_data.sh  load_mock_unit_data.sh  pr_convenience.sh  reorganise_mock_data_paths.py
