[tool.poetry]
name = "eq-runner-mock-sds"
version = "0.1.0"
description = "ONS Digital eQ Runner Mock SDS"
authors = ["ONSDigital"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.121.1"
sdc-cryptography = "^1.1.2"
uvicorn = "^0.23.0"
gunicorn = "^23.0.0"

[tool.poetry.group.dev.dependencies]
black = "^26.3.1"
pytest = "^9.0.3"
httpx = "^0.24.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
